# faster

./: .gitignore  Cargo.toml  LICENSE  README.md  regex.file  test.tsv
src/: main.rs  modules.rs
tests/: cli.rs  test.fastq
