[package]
name = "faster"
description = "fast statistics and more for 1 fastq file"
readme = "README.md"
homepage = "https://github.com/angelovangel/fastq-stats"
repository = "https://github.com/angelovangel/fastq-stats"
keywords = ["fastq", "bio"]
version = "0.1.3"
authors = ["Angel Angelov <aangeloo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
flate2 = "1.0.18"
clap = "~2.33.3"
rand = "0.7.3"
regex = "1"
