[package]
name = "faster"
description = "fast statistics and more for 1 fastq file"
readme = "README.md"
homepage = "https://github.com/angelovangel/faster"
repository = "https://github.com/angelovangel/faster"
keywords = ["fastq", "bio"]
version = "0.1.5"
authors = ["Angel Angelov <aangeloo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
flate2 = "1.0.18"
clap = "~2.33.3"
rand = "0.7.3"
regex = "1"
rayon = "1.5"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1.0"